src/objects/TMFC_TeamForce_Defect__c.object
<CustomObject>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outside Sales</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>#SystemAdmin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>TeamForce Defects</relationshipLabel>
        <relationshipName>TeamForce_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QAOwner__c</fullName>
        <formula>TMFC_TeamForce_User_Story__r.QAOwner__r.Full_Name__c</formula>
        <label>QA Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TMFC_Defect_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamForce_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMFC_Defect_Components__c</fullName>
        <label>Defect Components</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TMFC_Defect_Details__c</fullName>
        <description>Expected behavior
Actual behavior
Steps to recreate
Attachment(s)</description>
        <inlineHelpText>Expected behavior
Actual behavior
Steps to recreate
Attachment(s)</inlineHelpText>
        <label>Defect Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TMFC_Defect_Severity__c</fullName>
        <label>Defect Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMFC_Defect_Status__c</fullName>
        <label>Defect Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Dev in Progress</fullName>
                </value>
                <value>
                    <fullName>Dev Complete</fullName>
                </value>
                <value>
                    <fullName>QA in Progress</fullName>
                </value>
                <value>
                    <fullName>QA Complete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <isActive>false</isActive>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Code Merge Complete</fullName>
                    <isActive>false</isActive>
                    <label>Code Merge Complete</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Dev to Begin</fullName>
                    <isActive>false</isActive>
                    <label>Dev to Begin</label>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                    <isActive>false</isActive>
                    <label>Dropped</label>
                </value>
                <value>
                    <fullName>Production</fullName>
                    <isActive>false</isActive>
                    <label>Production</label>
                </value>
                <value>
                    <fullName>QA to Begin</fullName>
                    <isActive>false</isActive>
                    <label>QA to Begin</label>
                </value>
                <value>
                    <fullName>Ready for Design</fullName>
                    <isActive>false</isActive>
                    <label>Ready for Design</label>
                </value>
                <value>
                    <fullName>Ready for Dev Sign- off</fullName>
                    <isActive>false</isActive>
                    <label>Ready for Dev Sign- off</label>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                    <isActive>false</isActive>
                    <label>Reassigned</label>
                </value>
                <value>
                    <fullName>UAT Complete</fullName>
                    <isActive>false</isActive>
                    <label>UAT Complete</label>
                </value>
                <value>
                    <fullName>UAT in Progress</fullName>
                    <isActive>false</isActive>
                    <label>UAT in Progress</label>
                </value>
                <value>
                    <fullName>UAT to Begin</fullName>
                    <isActive>false</isActive>
                    <label>UAT to Begin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMFC_Defect_Title__c</fullName>
        <label>Defect Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMFC_Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMFC_TeamForce_Test_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamForce Test Script</label>
        <referenceTo>TMFC_TeamForce_Test_Script__c</referenceTo>
        <relationshipLabel>TeamForce Defects</relationshipLabel>
        <relationshipName>TeamForce_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMFC_TeamForce_User_Story__c</fullName>
        <label>TeamForce User Story</label>
        <referenceTo>TMFC_TeamForce_User_Story__c</referenceTo>
        <relationshipLabel>TeamForce Defects</relationshipLabel>
        <relationshipName>TeamForce_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>TeamForce Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TMFC_Defect_Title__c</columns>
        <columns>TMFC_Defect_Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Defects_in_QA</fullName>
        <columns>NAME</columns>
        <columns>TMFC_Defect_Title__c</columns>
        <columns>TMFC_Defect_Severity__c</columns>
        <columns>TMFC_Defect_Assignee__c</columns>
        <columns>TMFC_Defect_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TMFC_Environment__c</field>
            <operation>equals</operation>
            <value>QA</value>
        </filters>
        <filters>
            <field>TMFC_Defect_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Deferred,Rejected</value>
        </filters>
        <label>Open Defects in QA</label>
    </listViews>
    <listViews>
        <fullName>Open_Defects</fullName>
        <columns>NAME</columns>
        <columns>TMFC_Defect_Title__c</columns>
        <columns>TMFC_Defect_Severity__c</columns>
        <columns>TMFC_Defect_Assignee__c</columns>
        <columns>TMFC_Defect_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TMFC_Defect_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Deferred,Rejected</value>
        </filters>
        <label>Open Defects</label>
    </listViews>
    <nameField>
        <displayFormat>TFD-{000000000}</displayFormat>
        <label>TeamForce Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TeamForce Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>